[package]
name = "rust-osoyoo-car"
version = "0.1.0"
authors = ["Connor Denman <connor.denman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-osoyoo-car"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7f7d0a536d8045ed8f254fe75d9aa0d646c7a750"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
